--- a/src/main/webapp/pluginApp.xhtml
+++ b/src/main/webapp/pluginApp.xhtml
@@ -15,7 +15,7 @@
 	<p:layout fullPage="true">
 		<p:layoutUnit position="center">
 			<h2>TPro Plugin Manager</h2>
-			
+			<h:outputText/>
 			<h2>TPro User Manager </h2>
 			<h:form id="loginForm">
 				<p:panelGrid columns="2" rendered="#{!loginMB.loggedIn}">
