--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,10 +30,10 @@
 					<p:password 
 						id="password" 
 						value="#{credentialsMB.password}"/>
-					<p:commandButton value="Anmelden" action="#{loginMB.login}" process="loginForm" update="loginForm" rendered="#{!loginMB.loggedIn}"/>
-					<p:commandButton value="Registrieren" action="#{loginMB.signUp}" process="loginForm" update="loginForm" rendered="#{!loginMB.loggedIn}"/>
+					<p:commandButton value="Anmelden" ajax="false" action="#{loginMB.login}" process="loginForm" update="loginForm" rendered="#{!loginMB.loggedIn}"/>
+					<p:commandButton disabled="true" value="Registrieren" ajax="false" action="#{loginMB.signUp}" process="loginForm" update="loginForm" rendered="#{!loginMB.loggedIn}"/>
 				</p:panelGrid>
-				<p:commandButton value="Abmelden" action="#{loginMB.logout}" process="loginForm" update="loginForm" rendered="#{loginMB.loggedIn}"/>
+				<p:commandButton value="Abmelden" ajax="false" action="#{loginMB.logout}" process="loginForm" update="loginForm" rendered="#{loginMB.loggedIn}"/>
 			</h:form>
 		</p:layoutUnit>
 	</p:layout>
