--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -1,29 +1,28 @@
+<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html"	
-	xmlns:p="http://primefaces.org/ui">	
+	xmlns:p="http://primefaces.org/ui" 
+	xmlns:ui="http://java.sun.com/jsf/facelets">	
 <f:view contentType="text/html">  
-<h:head>
-	<f:facet name="first">
-		<title>TPro | Dashboard</title>
-	</f:facet>
-</h:head>
-<h:body>
-	<p:layout fullPage="true" rendered="#{loginMB.loggedIn}">
-		<p:layoutUnit position="center">
-			<h1>Admin-Dashboard</h1>
-			<p>Als Admin können Sie Plugins de-/installieren, Dienstanbieter zuweisen, ...</p>
-			<h2>Alle Plugins</h2>
-			<h:outputText/>
-			<h2>Mein Account</h2>
-			<h:form>
-				<p:commandButton value="Abmelden" ajax="false" action="#{loginMB.logout}"/>
-			</h:form>
-		</p:layoutUnit>
-	</p:layout>
-</h:body>
+  <ui:composition template="/template/basicLayout.xhtml">
+    <ui:define name="additional-head-content">
+        <title>TPro | Admin Dashboard</title>
+    </ui:define>
+    
+    <ui:define name="content">
+    	<ui:fragment rendered="#{loginMB.loggedIn}">
+    		<div class="container">
+		   		<h1>Admin-Dashboard</h1>
+				<p>Als Admin können Sie Plugins de-/installieren, Dienstanbieter zuweisen, ...</p>
+				<h2>Alle Plugins</h2>
+				<h:outputText/>
+			</div>
+    	</ui:fragment>  
+    </ui:define>
+  </ui:composition> 
 </f:view>
 </html>
