Added integration and unit testing with Arquillian
- Embedded Weld EE Container for Arquillian test execution
- Added ContextFacade and DAO integration test
- Implemented delete functionallity for ContextFacade
- Import scripts (SQL) for importing test data into MySQL DB
- Added two seperated MySQL DBs for integration testing and development

--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -14,7 +14,7 @@
     </ui:define>
     
     <ui:define name="content">
-    	<ui:fragment rendered="#{loginMB.loggedIn}">
+    	<ui:fragment rendered="#{loginMB.loggedInAsAdmin}">
     		<div class="container">
 		   		<h1>Admin-Dashboard</h1>
 				<p>Als Admin können Sie Plugins de-/installieren, Dienstanbieter zuweisen, ...</p>
