--- a/src/main/webapp/user/dashboard.xhtml
+++ b/src/main/webapp/user/dashboard.xhtml
@@ -13,12 +13,10 @@
         <title>TPro | User Dashboard</title>
     </ui:define>
     
-   
-    
     <ui:define name="content">
     	<ui:fragment rendered="#{loginMB.loggedIn}">
     		<div class="container">
-		   		<h1>Willkommen </h1>
+		   		<h1>Benutzer-Dashboard</h1>
 				<p>Als Benutzer können Sie alle Plugins sehen, auf die Sie Zugriff haben und welche Art von Zugriff Sie haben, sprich ob sie Dienstanbieter oder Dienstkonsument sind ...</p>
 				<h2>Meine Plugins</h2>
 				<h:outputText/>
