--- a/tpro-app/src/main/webapp/index.xhtml
+++ b/tpro-app/src/main/webapp/index.xhtml
@@ -32,8 +32,7 @@
 		      <div class="row">
 		        <div class="col-md-12">
 		        <h1>Registrieren</h1>
-    			  <p:messages id="messages" showDetail="true" autoUpdate="true" />
-		          <h:form id="signUpForm" class="row">
+				<h:form id="signUpForm" class="row">
 				    <div class="form-row">
 					  <div class="form-group col-md-6">
 					    <p:outputLabel for="prename" value="Vorname:"/>
@@ -66,7 +65,7 @@
 						</div>
 					</div>
 					<div class="form-group col-md-12"> 
-					   <p:commandButton class="btn btn-lg btn-primary form-control" value="Registrieren" ajax="true" action="#{loginMB.signUp}" process="signUpForm" update="signUpForm"/>
+					   <p:commandButton class="btn btn-lg btn-primary form-control" value="Registrieren" action="#{loginMB.signUp}" process="signUpForm" update="signUpForm"/>
 					</div>
 				  </h:form>
 		        </div>
