--- a/tpro-app/src/main/webapp/admin/plugin-management.xhtml
+++ b/tpro-app/src/main/webapp/admin/plugin-management.xhtml
@@ -3,42 +3,48 @@
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"	
-	xmlns:p="http://primefaces.org/ui" 
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">	
-<f:view contentType="text/html">  
-  <ui:composition template="/template/tpro-basic-layout.xhtml">
-    <ui:define name="additional-head-content">
-        <title>TPro | Admin Dashboard</title>
-        <!-- Custom styles for this view -->
-    	<h:outputStylesheet name="css/plugin-grid.css"/>
-    </ui:define>
-    
-    <ui:define name="content">
-    	<ui:fragment rendered="#{userMB.loggedInAsAdmin}">
-    		<div class="container">
-		   		<h1>Dienste verwalten</h1>
-				<h2>Alle Dienste</h2>
-				<div class="row pluginGrid">
-	        		<c:forEach var="plugin" items="#{pluginService.getAllPlugins()}">
-						<div class="col-lg-4">
-				          <p:graphicImage class="img-circle" name="#{plugin.thumbnailResource}" width="140" height="140" />
-				          <h2>#{plugin.title} (v#{plugin.version})</h2>
-				          <p>#{plugin.description}</p>
-				          <p>
-					        <p:link outcome="#{navigation.goToManagePluginProvidersPage(plugin.name)}" class="btn btn-default btn-lg" 
-					        	    value="Dienstanbieter verwalten »" icon="fa fa-fw fa-users" includeViewParams="true">
-					          <f:param name="pluginName" value="#{plugin.name}" />
-					        </p:link>
-				          </p>
-				        </div>
-					</c:forEach>
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
+<f:view contentType="text/html">
+	<ui:composition template="/template/tpro-basic-layout.xhtml">
+		<ui:define name="additional-head-content">
+			<title>TPro | Admin Dashboard</title>
+			<!-- Custom styles for this view -->
+			<h:outputStylesheet name="css/plugin-grid.css" />
+		</ui:define>
+
+		<ui:define name="content">
+			<ui:fragment rendered="#{userMB.loggedInAsAdmin}">
+				<div class="container">
+					<h1>Dienste verwalten</h1>
+					<h2>Alle Dienste</h2>
+					<div class="row pluginGrid">
+						<c:forEach var="plugin" items="#{pluginService.getAllPlugins()}">
+							<h:form>
+								<div class="col-lg-4">
+									<p:graphicImage class="img-circle"
+										name="#{plugin.thumbnailResource}" width="140" height="140" />
+									<h2>#{plugin.title} (v#{plugin.version})</h2>
+									<p>#{plugin.description}</p>
+									<p>
+										<p:commandButton
+											action="#{navigation.goToManagePluginProvidersPage(plugin.name)}"
+											class="btn btn-success btn-lg"
+											value="Dienstanbieter verwalten »" icon="fa fa-fw fa-users"
+											includeViewParams="true">
+											<f:param name="pluginName" value="#{plugin.name}" />
+										</p:commandButton>
+									</p>
+								</div>
+							</h:form>
+						</c:forEach>
+					</div>
 				</div>
-			</div>
-    	</ui:fragment>  
-    </ui:define>
-  </ui:composition> 
+			</ui:fragment>
+		</ui:define>
+	</ui:composition>
 </f:view>
 </html>
