--- a/tpro-app/src/main/webapp/admin/user-management.xhtml
+++ b/tpro-app/src/main/webapp/admin/user-management.xhtml
@@ -3,46 +3,107 @@
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"	
-	xmlns:p="http://primefaces.org/ui" 
-	xmlns:ui="http://java.sun.com/jsf/facelets">	
-<f:view contentType="text/html">  
-  <ui:composition template="/template/tpro-basic-layout.xhtml">
-    <ui:define name="additional-head-content">
-        <title>TPro | Admin Dashboard</title>
-        <!-- Custom styles for this view -->
-    	<h:outputStylesheet name="css/plugin-grid.css"/>
-    </ui:define>
-    
-    <ui:define name="content">
-    	<ui:fragment rendered="#{userMB.loggedInAsAdmin}">
-    		<div class="container">
-		   		<h1>Nutzer verwalten</h1>
-				<h2>Alle Benutzer</h2>
-				<h:form>
-					<p:dataTable var="user" value="#{userManager.users}" filteredValue="#{userManager.filteredUsers}" widgetVar="userTable"
-	        					 emptyMessage="Es konnten keine Benutzer gefunden werden">
-					    <p:column headerText="ID" priority="3">
-					        <h:outputText value="#{user.id}"  />
-					    </p:column>
-					    <p:column headerText="Username">
-					        <h:outputText value="#{user.username}" />
-					    </p:column>
-					    <p:column headerText="Email-Adresse" priority="2">
-					        <h:outputText value="#{user.email}" />
-					    </p:column>
-					    <p:column headerText="Vorname" priority="3">
-					        <h:outputText value="#{user.prename}" />
-					    </p:column>
-					    <p:column headerText="Nachname" priority="3">
-					        <h:outputText value="#{user.surname}" />
-					    </p:column>
-				  	</p:dataTable>
-				</h:form>
-			</div>
-    	</ui:fragment>  
-    </ui:define>
-  </ui:composition> 
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
+<f:view contentType="text/html">
+	<ui:composition template="/template/tpro-basic-layout.xhtml">
+
+		<ui:define name="additional-head-content">
+			<title>TPro | Benutzer verwalten</title>
+		</ui:define>
+
+		<ui:define name="content">
+			<ui:fragment rendered="#{userMB.loggedInAsAdmin}">
+				<div class="container">
+					<h1>Benutzer verwalten</h1>
+					<h2>Benutzer hinzufügen</h2>
+					<h:form id="signUpForm" class="row">
+						<div class="form-row">
+							<div class="form-group col-md-6">
+								<p:outputLabel for="prename" value="Vorname:" />
+								<p:inputText id="prename" class="form-control"
+									value="#{credentials.prename}" placeholder="Vorname"
+									required="true" />
+							</div>
+							<div class="form-group col-md-6">
+								<p:outputLabel for="surname" value="Nachname:" />
+								<p:inputText id="surname" class="form-control"
+									value="#{credentials.surname}" placeholder="Nachname"
+									required="true" />
+							</div>
+						</div>
+						<div class="form-row">
+							<div class="form-group col-md-6">
+								<p:outputLabel for="username" value="Benutzername:" />
+								<p:inputText id="username" class="form-control"
+									value="#{credentials.username}" placeholder="Benutzername"
+									required="true" />
+							</div>
+							<div class="form-group col-md-6">
+								<p:outputLabel for="email" value="Email-Adresse:" />
+								<p:inputText type="email" id="email" class="form-control"
+									value="#{credentials.email}" placeholder="Email-Adresse"
+									required="true" />
+							</div>
+						</div>
+						<div class="form-row">
+							<div class="form-group col-md-6">
+								<p:outputLabel for="password" value="Passwort:" />
+								<p:password id="password" class="form-control"
+									match="confirm-password" value="#{credentials.password}"
+									placeholder="Passwort" required="true" />
+							</div>
+
+							<div class="form-group col-md-6">
+								<p:outputLabel for="confirm-password"
+									value="Passwort wiederholen:" />
+								<p:password id="confirm-password" class="form-control"
+									value="#{credentials.password}"
+									placeholder="Passwort wiederholen" required="true" />
+							</div>
+						</div>
+						<div class="form-group col-md-12">
+							<p:commandButton class="btn btn-lg btn-primary"
+								value="Benutzer hinzufügen" icon="fa fa-fw fa-user-plus"
+								action='#{userManagement.addUser()}' />
+						</div>
+					</h:form>
+					<h2>Alle Benutzer</h2>
+					<h:form>
+						<p:dataTable var="user" value="#{userManagement.users}"
+							widgetVar="userTable"
+							emptyMessage="Es konnten keine Benutzer gefunden werden">
+							<p:column headerText="ID" priority="3">
+								<h:outputText value="#{user.id}" />
+							</p:column>
+							<p:column headerText="Username">
+								<h:outputText value="#{user.username}" />
+							</p:column>
+							<p:column headerText="Email-Adresse" priority="2">
+								<h:outputText value="#{user.email}" />
+							</p:column>
+							<p:column headerText="Vorname" priority="3">
+								<h:outputText value="#{user.prename}" />
+							</p:column>
+							<p:column headerText="Nachname" priority="3">
+								<h:outputText value="#{user.surname}" />
+							</p:column>
+
+							<p:column width="57">
+								<p:commandButton icon="fa fa-fw fa-trash"
+									title="Diesen Benutzer löschen"
+									action='#{userManagement.removeUser(user)}'
+									disabled="#{user.username.equals(userMB.currentUser.username)}">
+								</p:commandButton>
+							</p:column>
+						</p:dataTable>
+					</h:form>
+				</div>
+			</ui:fragment>
+		</ui:define>
+	</ui:composition>
 </f:view>
 </html>
