--- a/tpro-app/src/main/webapp/dashboard.xhtml
+++ b/tpro-app/src/main/webapp/dashboard.xhtml
@@ -3,68 +3,80 @@
     PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:f="http://xmlns.jcp.org/jsf/core"
-    xmlns:h="http://xmlns.jcp.org/jsf/html"	
-	xmlns:p="http://primefaces.org/ui" 
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">	
-<f:view contentType="text/html">  
-  <ui:composition template="/template/tpro-basic-layout.xhtml">
-    <ui:define name="additional-head-content">
-        <title>TPro | Dienste verwalten</title>
-        <!-- Custom styles for this view -->
-    	<h:outputStylesheet name="css/plugin-grid.css"/>
-    </ui:define>
-    
-    <ui:define name="content">
-    	<ui:fragment rendered="#{userMB.loggedIn}">
-    		<div class="container">
-		   		<h1>Dienste verwalten</h1>
-				<h2>Meine Dienste</h2>
-				<div class="row pluginGrid">
-					<c:set var="userPlugins" value="${pluginService.getPluginsAccessableByUserWithUsername(userMB.currentUser.username)}"/>
-					<c:choose>
-						<c:when test="#{userPlugins != null}">
-							<c:forEach var="plugin" items="#{userPlugins}">
-								<div class="col-lg-4">
-						          <p:graphicImage class="img-circle" name="#{plugin.thumbnailResource}" width="140" height="140" />
-						          <h2>#{plugin.title} (v#{plugin.version})</h2>
-						          <p>#{plugin.description}</p>
-			   					  <c:choose>
-			   					    <c:when test="#{pluginService.userIsPluginProvider(userMB.currentUser.username, plugin.name)}">
-							          <p>
-								        <p:link outcome="#{navigation.goToSharePluginPage(plugin.name)}" class="btn btn-default btn-md" 
-								        	    value="Dienst freigeben" icon="fa fa-fw fa-share-alt" includeViewParams="true">
-								          <f:param name="pluginName" value="#{plugin.name}" />
-								        </p:link>
-								        <p:link outcome="#{navigation.goToPluginPage(plugin.name)}" class="btn btn-default btn-md" 
-								        	    value="Zum Dienst »" icon="fa fa-fw fa-users" includeViewParams="true" style="margin-left: 0.34em;">
-								          <f:param name="pluginName" value="#{plugin.name}" />
-								        </p:link>
-							          </p>
-						            </c:when>
-						            <c:otherwise>
-							          <p>
-								        <p:link outcome="#{navigation.goToPluginPage(plugin.name)}" class="btn btn-default btn-lg" 
-								        	    value="Zum Dienst »" icon="fa fa-fw fa-users" includeViewParams="true" style="margin-left: 0.34em;">
-								          <f:param name="pluginName" value="#{plugin.name}" />
-								        </p:link>
-							          </p>
-						            </c:otherwise>
-						          </c:choose>
-						        </div>
-							</c:forEach>
-						</c:when>
-						<c:otherwise>
-							<div class="col-md-12">
-								<p> Keine Dienste verfügbar. Es scheint, als wurde Ihnen bisher noch kein Dienst zur Verfügung gestellt :( </p>
-							</div>
-			            </c:otherwise>
-					</c:choose>
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
+<f:view contentType="text/html">
+	<ui:composition template="/template/tpro-basic-layout.xhtml">
+		<ui:define name="additional-head-content">
+			<title>TPro | Dienste verwalten</title>
+			<!-- Custom styles for this view -->
+			<h:outputStylesheet name="css/plugin-grid.css" />
+		</ui:define>
+
+		<ui:define name="content">
+			<ui:fragment rendered="#{userMB.loggedIn}">
+				<div class="container">
+					<h1>Dienste verwalten</h1>
+					<h2>Meine Dienste</h2>
+					<div class="row pluginGrid">
+						<c:set var="userPlugins"
+							value="${pluginService.getPluginsAccessableByUserWithUsername(userMB.currentUser.username)}" />
+						<c:choose>
+							<c:when test="#{userPlugins != null}">
+								<c:forEach var="plugin" items="#{userPlugins}">
+									<div class="col-lg-4">
+										<p:graphicImage class="img-circle"
+											name="#{plugin.thumbnailResource}" width="140" height="140" />
+										<h2>#{plugin.title} (v#{plugin.version})</h2>
+										<p>#{plugin.description}</p>
+										<h:form>
+											<c:choose>
+												<c:when
+													test="#{pluginService.userIsPluginProvider(userMB.currentUser.username, plugin.name)}">
+													<p>
+														<p:commandButton
+															action="#{navigation.goToSharePluginPage(plugin.name)}"
+															class="btn btn-success btn-md" value="Dienst freigeben"
+															icon="fa fa-fw fa-share-alt" includeViewParams="true">
+															<f:param name="pluginName" value="#{plugin.name}" />
+														</p:commandButton>
+														<p:commandButton
+															action="#{navigation.goToPluginPage(plugin.name)}"
+															class="btn btn-default btn-md" value="Zum Dienst »"
+															includeViewParams="true" style="margin-left: 0.34em;">
+															<f:param name="pluginName" value="#{plugin.name}" />
+														</p:commandButton>
+													</p>
+												</c:when>
+												<c:otherwise>
+													<p>
+														<p:commandButton
+															action="#{navigation.goToPluginPage(plugin.name)}"
+															class="btn btn-success btn-lg" value="Zum Dienst »"
+															includeViewParams="true" style="margin-left: 0.34em;">
+															<f:param name="pluginName" value="#{plugin.name}" />
+														</p:commandButton>
+													</p>
+												</c:otherwise>
+											</c:choose>
+										</h:form>
+									</div>
+								</c:forEach>
+							</c:when>
+							<c:otherwise>
+								<div class="col-md-12">
+									<p>Keine Dienste verfügbar. Es scheint, als wurde Ihnen
+										bisher noch kein Dienst zur Verfügung gestellt :(</p>
+								</div>
+							</c:otherwise>
+						</c:choose>
+					</div>
 				</div>
-			</div>
-    	</ui:fragment>
-    </ui:define>
-  </ui:composition> 
+			</ui:fragment>
+		</ui:define>
+	</ui:composition>
 </f:view>
 </html>
