--- a/tpro-app/src/main/webapp/share-plugins.xhtml
+++ b/tpro-app/src/main/webapp/share-plugins.xhtml
@@ -19,7 +19,7 @@
 		<ui:define name="content">
 			<ui:fragment rendered="#{userMB.loggedIn}">
 				<c:if
-					test="#{pluginService.userIsPluginProvider(userMB.currentUser.username, pluginConsumerManagement.currentPlugin.name)}">
+					test="#{userMB.canBeProvided(pluginConsumerManagement.currentPlugin)}">
 					<div class="container">
 						<h1>#{pluginConsumerManagement.currentPlugin.title}</h1>
 						<h2>Dienstkonsumenten hinzufügen</h2>
