Added hello user plugin as solution

--- a/tpro-app/src/main/webapp/dashboard.xhtml
+++ b/tpro-app/src/main/webapp/dashboard.xhtml
@@ -35,7 +35,7 @@
 										<h:form>
 											<c:choose>
 												<c:when
-													test="#{userMB.canBeProvided(plugin)}">
+													test="#{userMB.canBeProvided(plugin.name)}">
 													<p>
 														<p:commandButton
 															action="#{navigation.goToSharePluginPage(plugin.name)}"
