--- a/tpro-app/src/main/webapp/index.xhtml
+++ b/tpro-app/src/main/webapp/index.xhtml
@@ -17,25 +17,26 @@
 		<ui:define name="content">
 			<div class="jumbotron">
 				<div class="container">
-					<h1>Teaching Promoter (TPro)</h1>
-					<p>Eine modulare responsive Webanwendung zur unterstüzung
-						innovativer Hochschullehre.</p>
-					<p>Die Idee ist es Lehrenden und Studierenden der HTW Berlin
-						eine Web-Anwendung zur Verfügung zu stellen, welche durch ihre
-						unterschiedlichen Dienste, die sie bereitstellt, dabei hilft die
-						Lehre an der Hochschule "besser" gestalten zu können. Dabei soll
-						außer- dem ein besonders großer Wert auf die Erweiterbarkeit der
-						Anwendung gelegt werden, sodass Studierende in den kommenden
-						Semestern die Möglichkeit haben im Rahmen von Projekt-, Bachelor-
-						oder Masterarbeiten die Anwendung um verschiendenste Dienste zu
-						erweitern.</p>
+					<div class="row">
+						<div class="col-sm-9">
+							<h2>Willkommen bei TPro!</h2>
+							<p>Der Teaching Promoter, kurz <i>TPro</i> ist eine modulare responsive Webanwendung, die der Unterstüzung
+								innovativer Hochschullehre dient. Dabei stellt TPro den Dozierenden und Studierenden unterschiedliche Dienste zur Verfügung, die 
+								die Lehre verbessern. </p>
+						</div>
+						<div class="col-sm-3">
+							<p:graphicImage class="img-responsive" name="img/tpro-colored-logo.png" style="margin: 1em auto !important;" width="200"/>
+						</div>
+					</div>
+					
+					
 				</div>
 			</div>
 			<ui:fragment rendered="#{!userMB.loggedIn}">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h1>Registrieren</h1>
+							<h2>Möchten Sie sich registrieren?</h2>
 							<h:form id="signUpForm" class="row">
 								<div class="form-row">
 									<div class="form-group col-md-6">
